[tool.poetry]
name = "hexlet_django_blog"
version = "0.1.0"
description = ""
authors = ["JoeCapHuang <kapt.tesla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
